--- a/stylesheets/layouts/pecha/A3/beginning.css
+++ b/stylesheets/layouts/pecha/A3/beginning.css
@@ -68,5 +68,5 @@
 }
 .pecha-a3 .pecha-beginning-page .pecha-content .line .translation td {
   position: relative;
-  top: -2px;
+  top: 3px;
 }
